<resources>
    <!--Базовые ресурсы приложения-->
    <string name="app_name">HelpYourself</string>

    <!--Ресурсы для MainActivity-->
    <string name="welcome_to_the_club_buddy">Welcome to the club, buddy!</string>
    <string name="let_s_start">Начать работу</string>
    <string name="map">Задания</string>
    <string name="dial">Тест</string>
    <string name="mail">Решать</string>
    <string name="settings">Настройки</string>

    <!--Ресурсы для ButtonsActivity-->
    <string name="_1">Задание 1</string>
    <string name="_2">Задание 2</string>
    <string name="_3">Задание 3</string>
    <string name="_4">Задание 4</string>
    <string name="_5">Задание 5</string>
    <string name="_6">Задание 6</string>
    <string name="_7">Задание 7</string>
    <string name="_8">Задание 8</string>
    <string name="_9">Задание 9</string>
    <string name="_10">Задание 10</string>
    <string name="_11">Задание 11</string>
    <string name="_12">Задание 12</string>
    <string name="_13">Задание 13</string>
    <string name="_14">Задание 14</string>
    <string name="_15">Задание 15</string>
    <string name="_16">Задание 16</string>
    <string name="_17">Задание 17</string>
    <string name="_18">Задание 18</string>
    <string name="_19">Задание 19</string>
    <string name="_20">Задание 20</string>
    <string name="_21">Задание 21</string>
    <string name="_22">Задание 22</string>
    <string name="_23">Задание 23</string>
    <string name="_24">Задание 24</string>
    <string name="_25">Задание 25</string>
    <string name="_26">Задание 26</string>

    <!--Ресурсы для AnsweringActivity-->
    <string name="enter">Ответить</string>
    <string name="uslovie">Введите условие задачи</string>
    <string name="otvet">Введите ответ</string>
    <string name="go">Далее</string>
    <string name="current_level">Уровень: 1</string>
    <string name="hint">Введите ответ</string>
    <string name="current_num">Номер задания в базе:</string>
    <string name="zero_progress">0/10</string>

    <!--Ресурсы для Test_CreatingActivity-->
    <string name="no_information">Нет данных</string>
    <string name="check_test">Проверить тест</string>

    <!--Ресурсы для MainFragment2-->
    <string name="level"><b>Уровень</b></string>
    <string name="show_tasks">Вывести список предустановленных заданий</string>
    <string name="my_tasks">Мои задания</string>

    <!--Ресурсы для DataBaseActivity-->
    <string name="advise">Подсказка: номер задания для изменения или удаления можно посмотреть нажав на кнопку \"Мои задания\"</string>
    <string name="data_hint">Введите номер задания, которое хотите изменить или удалить.</string>
    <string name="create_task">Создать задание</string>
    <string name="remake_task">Редактировать задание</string>
    <string name="delete_task">Удалить задание</string>
    <string name="Level1">Уровень 1</string>
    <string name="Level2">Уровень 2</string>
    <string name="Level3">Уровень 3</string>

    <!--Ресурсы для ChooseSubActivity-->
    <string name="choose_sub">Выберите предмет:</string>
    <string name="informatics">Информатика</string>
    <string name="maths">Математика (базовый уровень)</string>
    <string name="russian">Русский язык</string>

    <!--Ресурсы для ChooseIntentActivity-->
    <string name="label_question">Чем займемся сегодня?</string>
    <string name="solving">Решать задания</string>
    <string name="adding">Добавить задания</string>
    <string name="list_of_tasks">Список заданий</string>
    <string name="create_test">Составить тест</string>
    <string name="calendar">Изменить режим тренировок</string>

    <!--Ресурсы для SettingsActivity-->
    <string name="action_settings">Настройки</string>
    <string name="action_delete_progress">Сбросить прогресс</string>
    <string name="pref_size">text_size</string>
    <string name="pref_style">Стиль текста</string>
    <string name="pref_style_regular">Нормальный</string>
    <string name="pref_style_bold">Полужирный</string>
    <string name="pref_style_italic">Курсив</string>
    <string name="pref_open_mode">Режим открытия</string>
    <string name="pref_notifications">Уведомления</string>
    <string name="pref_set_notifications">Настроить уведомления</string>

    <!--Ресурсы для SeekBarPreference-->
    <string name="dialog_title">Изменение размера шрифта</string>
    <string name="dialog_summary">Устанавливает новый размер шрифта</string>

    <!--Ресурсы для TimeActivity-->
    <string name="set_notification">Настроить уведомление</string>

    <!--Ресурсы для AboutActivity-->
    <string name="about">
        Приложение для успешной подготовки к ЕГЭ HelpYourself\nРазработано командой МАОУ Лицея №180 \"Полифорум\" при поддержке образовательной программы ЮнIT-Урал 2018-2019\n\nСлужба технической поддержки: sup.helpyourself@gmail.com
    </string>

    <!--Ресурсы для ThreadActivity-->
    <string name="kb"> КБ</string>
    <string name="progress">Прогресс: </string>
    <string name="success">Копирование завершено. Скопировано: </string>

</resources>