<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonsActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonChoice1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_1"
                android:textAllCaps="false"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonChoice2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_2"
                android:textAllCaps="false"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonChoice1" />

            <Button
                android:id="@+id/buttonChoice3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_3"
                android:textAllCaps="false"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonChoice2" />

            <Button
                android:id="@+id/buttonChoice4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_4"
                android:textAllCaps="false"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonChoice3"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/buttonChoice5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_5"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_6"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_7"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_8"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_9"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_10"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_11"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_12"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_13"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_14"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_15"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice16"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_16"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice17"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_17"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice18"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_18"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice19"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_19"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice20"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_20"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice21"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_21"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice22"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_22"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice23"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_23"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice24"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_24"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice25"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_25"
                android:textAllCaps="false"
                android:textSize="26sp" />

            <Button
                android:id="@+id/buttonChoice26"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_26"
                android:textAllCaps="false"
                android:textSize="26sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>